--- a/src/components/Meals/MealsSummary.module.css
+++ b/src/components/Meals/MealsSummary.module.css
@@ -14,6 +14,10 @@
   }
   
   .summary h2 {
-    font-size: 2rem;
+    font-size: 1.2rem;
+    margin-top: 0;
+  }
+  .summary p {
+    font-size: .8rem;
     margin-top: 0;
   }
